// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrganisationSettings /> Client Journey 1`] = `
.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #197DA4;
  border: 2px solid #197DA4;
  color: #FFF;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  border-radius: 0.3rem;
  font-size: 1.7rem;
  font-style: bold;
  font-weight: 700;
  height: 4rem;
  padding: 0 1rem;
}

.c18:disabled {
  color: #8CBED1;
  background-color: #4797B6;
  border-color: #4797B6;
  pointer-events: auto;
  cursor: not-allowed;
}

.c18:disabled svg path {
  fill: #8CBED1;
}

.c18:focus {
  outline: none;
}

.c18:hover:not([disabled]) {
  background-color: #2F8AAD;
  border-color: #2F8AAD;
  color: #FFF;
}

.c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: transparent;
  border: 2px solid transparent;
  color: #197DA4;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  border-radius: 0.3rem;
  font-size: 1.7rem;
  font-style: bold;
  font-weight: 700;
  height: 4rem;
  padding: 0 1rem;
  margin: 0 0 2rem;
  padding: 0 1.5rem 0 1rem;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.6rem;
  font-weight: 400;
  height: calc(1.2rem + 2rem);
  border: none;
}

.c24:disabled {
  color: #8CBED1;
  background-color: transparent;
  border-color: transparent;
  pointer-events: auto;
  cursor: not-allowed;
}

.c24:focus {
  outline: none;
}

.c24:hover:not([disabled]) {
  background-color: transparent;
  border-color: transparent;
  color: #4797B6;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: calc(1.2rem + 1rem);
  height: calc(1.2rem + 1rem);
  -webkit-transition: background 0.2s linear;
  transition: background 0.2s linear;
  -webkit-appearance: none !important;
  font-size: 2.5rem;
  border: none;
  margin-right: 1.1rem;
  margin-right: 0.8rem;
  background: #197DA4;
  border-radius: 50%;
}

.c25 svg path {
  fill: #197DA4;
}

.c25 svg path {
  fill: #FFF;
}

.c14 {
  width: 2rem;
  height: 2rem;
  margin: 0 1rem 0 0;
}

.c20 {
  width: 2rem;
  height: 2rem;
  margin: 0;
}

.c26 {
  width: 1.2rem;
  height: 1.2rem;
  margin: 0;
}

.c15 {
  -webkit-transition: none;
  transition: none;
}

.c21 {
  -webkit-transition: fill 0.2s linear;
  transition: fill 0.2s linear;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 svg {
  cursor: pointer;
}

.c9 svg:hover {
  opacity: 0.8;
}

.c13 {
  margin: 0;
}

.c28 {
  margin: 0.5rem 0;
}

.c23 {
  font-weight: 400;
  font-size: 1.6rem;
}

.c23 p {
  width: 100%;
  color: #00272E;
  text-align: left;
  margin: 0 0 2rem;
  padding: 0;
  line-height: 2.8rem;
}

.c23 p em,
.c23 p i {
  font-style: italic;
}

.c23 p b,
.c23 p strong {
  font-weight: bold;
}

.c23 p a {
  font-size: 1em;
  color: #197DA4;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
  font-weight: 600;
}

.c23 p a:hover {
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
  color: #5ABEE6;
}

.c23 p pre {
  font-family: "Courier 10 Pitch",Courier,monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
}

.c23 p code {
  font-family: Monaco,Consolas,"Andale Mono","DejaVu Sans Mono",monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
  background: #faf8f0;
}

.c23 ul {
  font-weight: 400;
  width: 100%;
  color: #00272E;
  margin: 0 0 2rem;
  padding: 0 0 0 2.5rem;
  font-size: 1.6rem;
  line-height: 2.8rem;
}

.c23 ul li p {
  margin: 0;
}

.c23 h1,
.c23 h2,
.c23 h3,
.c23 h4 {
  width: 100%;
  color: #00272E;
  margin: 3rem 0 1rem;
  padding: 0;
}

.c23 h1 {
  font-size: 4rem;
  line-height: 4.8rem;
}

.c23 h2 {
  font-size: 2.8rem;
  line-height: 3.6rem;
}

.c23 h3 {
  font-size: 2.2rem;
  line-height: 3rem;
}

.c23 h4 {
  font-size: 2rem;
  line-height: 2.8rem;
}

.c33 {
  width: auto;
  font-size: 1.4rem;
  margin: 0 0 0.5rem;
  padding: 0;
  display: inline-block;
  font-weight: 400;
  font-style: normal;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 1.6rem;
  color: #335257;
  word-break: break-word;
}

.c10 {
  width: auto;
  color: #335257;
  text-align: left;
  margin: 0 0 3rem;
  padding: 0;
  font-weight: 700;
  font-size: 18px;
  line-height: 28px;
}

.c16 {
  width: auto;
  color: #335257;
  text-align: left;
  margin: 0;
  padding: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 22px;
}

.c29 {
  width: auto;
  color: #335257;
  text-align: left;
  margin: 0.5rem 0;
  padding: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 22px;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 1rem 0 1rem;
}

.c31 {
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.c32 {
  height: 3rem;
  width: 3rem;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
  border: 0.1rem solid #B2BEC0;
  border-radius: 0.3rem;
  background-color: #FFF;
  margin-right: 2rem;
  font-size: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c32:hover {
  border: 0.1rem solid #197DA4;
}

.c32 svg path {
  fill: #197DA4;
}

.c34 {
  font-size: 1.6rem;
  text-align: left;
  line-height: 2rem;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
  color: #335257;
  cursor: pointer;
}

.c34 sup {
  visibility: hidden;
  padding-left: 0.2rem;
  color: #CC0135;
}

.c11 {
  width: 100%;
  border: 1px solid #B2BEC0;
  border-radius: 0.3rem;
  margin: 0;
}

.c27 {
  width: 100%;
  border: 1px solid #B2BEC0;
  border-radius: 0.3rem;
}

.c12 {
  border-bottom: 1px solid #B2BEC0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem 0.5rem 1rem 1rem;
  background-color: #F9F9F9;
}

.c22 {
  padding: 2rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c19 {
  padding: 0.5rem;
  height: 3.5rem;
  width: 3.5rem;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 0.5rem;
}

.c0 {
  margin: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-bottom: 5rem;
  width: 22.2rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  box-shadow: 0 0 5px 0 #EFEFEF;
}

.c2 {
  margin-right: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  width: 22.2rem;
  border-top: 1px solid #B2BEC0;
  border-bottom: 1px solid #B2BEC0;
  border-left: 1px solid #B2BEC0;
  border-right: 1px solid #B2BEC0;
  border-radius: 0.5rem 0.5rem 0 0;
  position: relative;
}

.c2:hover,
.c2:focus {
  opacity: 0.8;
}

.c4 {
  margin-right: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  width: 22.2rem;
  border-top: 0;
  border-bottom: 1px solid #B2BEC0;
  border-left: 1px solid #B2BEC0;
  border-right: 1px solid #B2BEC0;
  border-radius: 0;
  position: relative;
}

.c4:hover,
.c4:focus {
  opacity: 1;
}

.c4::after {
  content: "";
  position: absolute;
  top: -0.1rem;
  left: -0.1rem;
  width: 1rem;
  height: calc(100% + 0.2rem);
  background-color: #00272E;
  border: 1px solid #00272E;
  border-radius: 0;
}

.c6 {
  margin-right: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  width: 22.2rem;
  border-top: 0;
  border-bottom: 1px solid #B2BEC0;
  border-left: 1px solid #B2BEC0;
  border-right: 1px solid #B2BEC0;
  border-radius: 0 0 0.5rem 0.5rem;
  position: relative;
}

.c6:hover,
.c6:focus {
  opacity: 0.8;
}

.c3 {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-left: 2rem;
}

.c3:hover,
.c3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
}

.c5 {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #00272E;
  border-bottom: 1px solid transparent;
  cursor: default;
  margin-left: 2rem;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
}

.c7 {
  width: 100%;
  margin-left: 10rem;
}

.c8 {
  width: 72rem;
}

@media screen and (min-width:400px) {
  .c10 {
    font-size: calc(18px + (30 - 18) * (100vw - 400px) / (1200 - 400));
    line-height: calc(28px + (35 - 28) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c10 {
    font-size: 30px;
    line-height: 35px;
  }
}

@media screen and (min-width:400px) {
  .c16 {
    font-size: calc(14px + (20 - 14) * (100vw - 400px) / (1200 - 400));
    line-height: calc(22px + (25 - 22) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c16 {
    font-size: 20px;
    line-height: 25px;
  }
}

@media screen and (min-width:400px) {
  .c29 {
    font-size: calc(14px + (20 - 14) * (100vw - 400px) / (1200 - 400));
    line-height: calc(22px + (25 - 22) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c29 {
    font-size: 20px;
    line-height: 25px;
  }
}

<div>
  <div
    class="c0"
    data-testid="settings-tabs-wrapper"
    type="vertical"
  >
    <ul
      class="c1"
      type="vertical"
    >
      <li
        class="c2"
        data-testid="tab-sales_preferences"
        type="vertical"
      >
        <a
          class="c3"
          name="sales_preferences"
          type="vertical"
        >
          Sales Preferences
        </a>
      </li>
      <li
        class="c4"
        data-testid="tab-client_journey"
        type="vertical"
      >
        <a
          class="c5"
          name="client_journey"
          type="vertical"
        >
          Client Journey
        </a>
      </li>
      <li
        class="c6"
        data-testid="tab-quick_quote"
        type="vertical"
      >
        <a
          class="c3"
          name="quick_quote"
          type="vertical"
        >
          Quick Quote
        </a>
      </li>
    </ul>
    <div
      class="c7"
      type="vertical"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
          data-testid="heading_2-helper_text-container"
        >
          <h2
            class="c10"
          >
            Client Journey
          </h2>
          
        </div>
        <div
          class="c11"
          data-testid="consent_text-text_setting-wrapper"
        >
          <div
            class="c12"
          >
            <div
              class="c9"
              data-testid="heading_3-helper_text-container"
            >
              <div
                class="c13"
              >
                <svg
                  class="c14"
                  data-testid="heading_3-helper_text-icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="c15"
                    d="M11,18H13V16H11V18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6Z"
                    fill="#197DA4"
                  />
                </svg>
              </div>
              <h3
                class="c16"
              >
                Consent Text
              </h3>
            </div>
            <div
              class="c17"
            >
              <button
                class="c18 c19"
                data-testid="consent_text_edit-button"
                loading="false"
                type="button"
              >
                <svg
                  class="c20"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="c21"
                    d="M2,6V8H14V6H2M2,10V12H14V10H2M20.04,10.13C19.9,10.13 19.76,10.19 19.65,10.3L18.65,11.3L20.7,13.35L21.7,12.35C21.92,12.14 21.92,11.79 21.7,11.58L20.42,10.3C20.31,10.19 20.18,10.13 20.04,10.13M18.07,11.88L12,17.94V20H14.06L20.12,13.93L18.07,11.88M2,14V16H10V14H2Z"
                    fill="#FFF"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="c22"
          >
            <div
              class="c23"
            >
              Some consent text here
            </div>
          </div>
        </div>
        <button
          class="c24"
          data-testid="revert_consent_text-button"
          loading="false"
          type="button"
        >
          <div
            class="c25"
            data-testid="revert_consent_text-button-preceding_icon"
          >
            <svg
              class="c26"
              viewBox="0 0 24 24"
            >
              <path
                class="c21"
                d="M13.5,7A6.5,6.5 0 0,1 20,13.5A6.5,6.5 0 0,1 13.5,20H10V18H13.5C16,18 18,16 18,13.5C18,11 16,9 13.5,9H7.83L10.91,12.09L9.5,13.5L4,8L9.5,2.5L10.92,3.91L7.83,7H13.5M6,18H8V20H6V18Z"
                fill="#00222b"
              />
            </svg>
          </div>
          Revert consent text to default
        </button>
        <div
          class="c11"
          data-testid="exclusion_text-text_setting-wrapper"
        >
          <div
            class="c12"
          >
            <div
              class="c9"
              data-testid="heading_3-helper_text-container"
            >
              <div
                class="c13"
              >
                <svg
                  class="c14"
                  data-testid="heading_3-helper_text-icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="c15"
                    d="M11,18H13V16H11V18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6Z"
                    fill="#197DA4"
                  />
                </svg>
              </div>
              <h3
                class="c16"
              >
                Exclusion Text
              </h3>
            </div>
            <div
              class="c17"
            >
              <button
                class="c18 c19"
                data-testid="exclusion_text_edit-button"
                loading="false"
                type="button"
              >
                <svg
                  class="c20"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="c21"
                    d="M2,6V8H14V6H2M2,10V12H14V10H2M20.04,10.13C19.9,10.13 19.76,10.19 19.65,10.3L18.65,11.3L20.7,13.35L21.7,12.35C21.92,12.14 21.92,11.79 21.7,11.58L20.42,10.3C20.31,10.19 20.18,10.13 20.04,10.13M18.07,11.88L12,17.94V20H14.06L20.12,13.93L18.07,11.88M2,14V16H10V14H2Z"
                    fill="#FFF"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="c22"
          >
            <div
              class="c23"
            >
              Some exclusion text here
            </div>
          </div>
        </div>
        <button
          class="c24"
          data-testid="revert_exclusion_text-button"
          loading="false"
          type="button"
        >
          <div
            class="c25"
            data-testid="revert_exclusion_text-button-preceding_icon"
          >
            <svg
              class="c26"
              viewBox="0 0 24 24"
            >
              <path
                class="c21"
                d="M13.5,7A6.5,6.5 0 0,1 20,13.5A6.5,6.5 0 0,1 13.5,20H10V18H13.5C16,18 18,16 18,13.5C18,11 16,9 13.5,9H7.83L10.91,12.09L9.5,13.5L4,8L9.5,2.5L10.92,3.91L7.83,7H13.5M6,18H8V20H6V18Z"
                fill="#00222b"
              />
            </svg>
          </div>
          Revert exclusion text to default
        </button>
        <div
          class="c27"
        >
          <div
            class="c12"
          >
            <div
              class="c9"
              data-testid="heading_3-helper_text-container"
            >
              <div
                class="c28"
              >
                <svg
                  class="c14"
                  data-testid="heading_3-helper_text-icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="c15"
                    d="M11,18H13V16H11V18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6Z"
                    fill="#197DA4"
                  />
                </svg>
              </div>
              <h3
                class="c29"
              >
                Selling Options
              </h3>
            </div>
          </div>
          <div
            class="c22"
          >
            <div
              class="c30"
              data-testid="skip_affordable_budget-checkbox-wrapper"
            >
              <div
                class="c31"
                data-testid="skip_affordable_budget-checkbox"
              >
                <div
                  aria-checked="true"
                  aria-invalid="false"
                  class="c32"
                  data-testid="skip_affordable_budget-checkbox-checkbox"
                  role="checkbox"
                >
                  <svg
                    class="c20"
                    viewBox="0 0 24 24"
                  >
                    <path
                      class="c21"
                      d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
                      fill="#00222b"
                    />
                  </svg>
                </div>
                <div
                  class="c9"
                  data-testid="skip_affordable_budget-helper_text-container"
                >
                  <label
                    class="c33 c34"
                    data-testid="skip_affordable_budget-checkbox-label"
                    font-size="1.4rem"
                    for="skip_affordable_budget"
                    name="skip_affordable_budget"
                  >
                    Skip affordable budget fact-find
                    <sup>
                      *
                    </sup>
                  </label>
                  
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<OrganisationSettings /> Quick Quote 1`] = `
.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: transparent;
  border: 2px solid transparent;
  color: #197DA4;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  border-radius: 0.3rem;
  font-size: 1.7rem;
  font-style: bold;
  font-weight: 700;
  height: 4rem;
  padding: 0 1rem;
  padding: 0 1.5rem 0 1rem;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.6rem;
  font-weight: 400;
  height: calc(2rem + 2rem);
  border: none;
}

.c19:disabled {
  color: #8CBED1;
  background-color: transparent;
  border-color: transparent;
  pointer-events: auto;
  cursor: not-allowed;
}

.c19:focus {
  outline: none;
}

.c19:hover:not([disabled]) {
  background-color: transparent;
  border-color: transparent;
  color: #4797B6;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: calc(2rem + 1rem);
  height: calc(2rem + 1rem);
  -webkit-transition: background 0.2s linear;
  transition: background 0.2s linear;
  -webkit-appearance: none !important;
  font-size: 2.5rem;
  border: none;
  margin-right: 1.1rem;
  margin-right: 0.8rem;
  background: #197DA4;
  border-radius: 50%;
}

.c20 svg path {
  fill: #197DA4;
}

.c20 svg path {
  fill: #FFF;
}

.c21 {
  width: 2rem;
  height: 2rem;
  margin: 0;
}

.c22 {
  -webkit-transition: fill 0.2s linear;
  transition: fill 0.2s linear;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 svg {
  cursor: pointer;
}

.c9 svg:hover {
  opacity: 0.8;
}

.c10 {
  width: auto;
  color: #335257;
  text-align: left;
  margin: 0 0 3rem;
  padding: 0;
  font-weight: 700;
  font-size: 18px;
  line-height: 28px;
}

.c14 {
  width: auto;
  color: #FFF;
  text-align: left;
  margin: 0;
  padding: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 22px;
}

.c17 {
  width: auto;
  color: #335257;
  text-align: left;
  margin: 0;
  padding: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 22px;
}

.c16 {
  font-weight: 400;
  width: auto;
  color: #335257;
  text-align: left;
  margin: 1rem 0 0 0;
  padding: 0;
  font-size: 14px;
  line-height: 16px;
}

.c16 em,
.c16 i {
  font-style: italic;
}

.c16 b,
.c16 strong {
  font-weight: bold;
}

.c16 pre {
  font-family: "Courier 10 Pitch",Courier,monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
}

.c16 code {
  font-family: Monaco,Consolas,"Andale Mono","DejaVu Sans Mono",monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
  background: #faf8f0;
}

.c0 {
  margin: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-bottom: 5rem;
  width: 22.2rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  box-shadow: 0 0 5px 0 #EFEFEF;
}

.c2 {
  margin-right: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  width: 22.2rem;
  border-top: 1px solid #B2BEC0;
  border-bottom: 1px solid #B2BEC0;
  border-left: 1px solid #B2BEC0;
  border-right: 1px solid #B2BEC0;
  border-radius: 0.5rem 0.5rem 0 0;
  position: relative;
}

.c2:hover,
.c2:focus {
  opacity: 0.8;
}

.c4 {
  margin-right: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  width: 22.2rem;
  border-top: 0;
  border-bottom: 1px solid #B2BEC0;
  border-left: 1px solid #B2BEC0;
  border-right: 1px solid #B2BEC0;
  border-radius: 0;
  position: relative;
}

.c4:hover,
.c4:focus {
  opacity: 0.8;
}

.c5 {
  margin-right: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  width: 22.2rem;
  border-top: 0;
  border-bottom: 1px solid #B2BEC0;
  border-left: 1px solid #B2BEC0;
  border-right: 1px solid #B2BEC0;
  border-radius: 0 0 0.5rem 0.5rem;
  position: relative;
}

.c5:hover,
.c5:focus {
  opacity: 1;
}

.c5::after {
  content: "";
  position: absolute;
  top: -0.1rem;
  left: -0.1rem;
  width: 1rem;
  height: calc(100% + 0.2rem);
  background-color: #00272E;
  border: 1px solid #00272E;
  border-radius: 0 0 0 0.5rem;
}

.c3 {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-left: 2rem;
}

.c3:hover,
.c3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
}

.c6 {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #00272E;
  border-bottom: 1px solid transparent;
  cursor: default;
  margin-left: 2rem;
}

.c6:hover,
.c6:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
}

.c7 {
  width: 100%;
  margin-left: 10rem;
}

.c8 {
  width: 72rem;
}

.c11 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  background: #FFF;
  border: 1px solid #B2BEC0;
  border-radius: 0.3rem;
  width: 33.33%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 1;
  border-right: none;
  border-radius: 0.3rem 0 0 0.3rem;
}

.c23 {
  background: #FFF;
  border: 1px solid #B2BEC0;
  border-radius: 0.3rem;
  width: 33.33%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 2;
}

.c26 {
  background: #FFF;
  border: 1px solid #B2BEC0;
  border-radius: 0.3rem;
  width: 33.33%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 1;
  border-left: none;
  border-radius: 0 0.3rem 0.3rem 0;
}

.c13 {
  height: 7rem;
  border-bottom: 1px solid #B2BEC0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 4rem;
  background-color: #38A37E;
}

.c15 {
  height: 7rem;
  border-bottom: 1px solid #B2BEC0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c18 {
  height: 7rem;
  border-bottom: 1px solid #B2BEC0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 6rem;
  border-bottom: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c24 {
  height: 7rem;
  border-bottom: 1px solid #B2BEC0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #197DA4;
  height: 4.5rem;
}

.c25 {
  height: 7rem;
  border-bottom: 1px solid #B2BEC0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 6.5rem;
  border-bottom: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c27 {
  height: 7rem;
  border-bottom: 1px solid #B2BEC0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 4rem;
  background-color: #6464B8;
}

@media screen and (min-width:400px) {
  .c10 {
    font-size: calc(18px + (30 - 18) * (100vw - 400px) / (1200 - 400));
    line-height: calc(28px + (35 - 28) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c10 {
    font-size: 30px;
    line-height: 35px;
  }
}

@media screen and (min-width:400px) {
  .c14 {
    font-size: calc(14px + (20 - 14) * (100vw - 400px) / (1200 - 400));
    line-height: calc(22px + (25 - 22) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c14 {
    font-size: 20px;
    line-height: 25px;
  }
}

@media screen and (min-width:400px) {
  .c17 {
    font-size: calc(14px + (20 - 14) * (100vw - 400px) / (1200 - 400));
    line-height: calc(22px + (25 - 22) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c17 {
    font-size: 20px;
    line-height: 25px;
  }
}

@media screen and (min-width:400px) {
  .c16 {
    font-size: calc(14px + (16 - 14) * (100vw - 400px) / (1200 - 400));
    line-height: calc(16px + (20 - 16) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c16 {
    font-size: 16px;
    line-height: 20px;
  }
}

<div>
  <div
    class="c0"
    data-testid="settings-tabs-wrapper"
    type="vertical"
  >
    <ul
      class="c1"
      type="vertical"
    >
      <li
        class="c2"
        data-testid="tab-sales_preferences"
        type="vertical"
      >
        <a
          class="c3"
          name="sales_preferences"
          type="vertical"
        >
          Sales Preferences
        </a>
      </li>
      <li
        class="c4"
        data-testid="tab-client_journey"
        type="vertical"
      >
        <a
          class="c3"
          name="client_journey"
          type="vertical"
        >
          Client Journey
        </a>
      </li>
      <li
        class="c5"
        data-testid="tab-quick_quote"
        type="vertical"
      >
        <a
          class="c6"
          name="quick_quote"
          type="vertical"
        >
          Quick Quote
        </a>
      </li>
    </ul>
    <div
      class="c7"
      type="vertical"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
          data-testid="heading_2-helper_text-container"
        >
          <h2
            class="c10"
          >
            Quick Quote
          </h2>
          
        </div>
        <div
          class="c11"
        >
          <div
            class="c12"
          >
            <div
              class="c13"
            >
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c14"
                >
                  Basic Policy
                </h3>
                
              </div>
            </div>
            <div
              class="c15"
            >
              <p
                class="c16"
                font-size=""
              >
                Excess
              </p>
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c17"
                >
                  £250
                </h3>
                
              </div>
            </div>
            <div
              class="c15"
            >
              <p
                class="c16"
                font-size=""
              >
                Hospital list
              </p>
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c17"
                >
                  Standard
                </h3>
                
              </div>
            </div>
            <div
              class="c15"
            >
              <p
                class="c16"
                font-size=""
              >
                Outpatient limit
              </p>
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c17"
                >
                  Zero
                </h3>
                
              </div>
            </div>
            <div
              class="c15"
            >
              <p
                class="c16"
                font-size=""
              >
                Underwriting
              </p>
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c17"
                >
                  MORI
                </h3>
                
              </div>
            </div>
            <div
              class="c18"
            >
              <button
                class="c19"
                data-testid="basic_edit_button-button"
                loading="false"
                type="button"
              >
                <div
                  class="c20"
                  data-testid="basic_edit_button-button-preceding_icon"
                >
                  <svg
                    class="c21"
                    viewBox="0 0 24 24"
                  >
                    <path
                      class="c22"
                      d="M2,6V8H14V6H2M2,10V12H14V10H2M20.04,10.13C19.9,10.13 19.76,10.19 19.65,10.3L18.65,11.3L20.7,13.35L21.7,12.35C21.92,12.14 21.92,11.79 21.7,11.58L20.42,10.3C20.31,10.19 20.18,10.13 20.04,10.13M18.07,11.88L12,17.94V20H14.06L20.12,13.93L18.07,11.88M2,14V16H10V14H2Z"
                      fill="#00222b"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
          <div
            class="c23"
          >
            <div
              class="c24"
            >
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c14"
                >
                  Standard Policy
                </h3>
                
              </div>
            </div>
            <div
              class="c15"
            >
              <p
                class="c16"
                font-size=""
              >
                Excess
              </p>
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c17"
                >
                  £1000
                </h3>
                
              </div>
            </div>
            <div
              class="c15"
            >
              <p
                class="c16"
                font-size=""
              >
                Hospital list
              </p>
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c17"
                >
                  Comprehensive
                </h3>
                
              </div>
            </div>
            <div
              class="c15"
            >
              <p
                class="c16"
                font-size=""
              >
                Outpatient limit
              </p>
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c17"
                >
                  Medium
                </h3>
                
              </div>
            </div>
            <div
              class="c15"
            >
              <p
                class="c16"
                font-size=""
              >
                Underwriting
              </p>
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c17"
                >
                  MORI
                </h3>
                
              </div>
            </div>
            <div
              class="c25"
            >
              <button
                class="c19"
                data-testid="standard_edit_button-button"
                loading="false"
                type="button"
              >
                <div
                  class="c20"
                  data-testid="standard_edit_button-button-preceding_icon"
                >
                  <svg
                    class="c21"
                    viewBox="0 0 24 24"
                  >
                    <path
                      class="c22"
                      d="M2,6V8H14V6H2M2,10V12H14V10H2M20.04,10.13C19.9,10.13 19.76,10.19 19.65,10.3L18.65,11.3L20.7,13.35L21.7,12.35C21.92,12.14 21.92,11.79 21.7,11.58L20.42,10.3C20.31,10.19 20.18,10.13 20.04,10.13M18.07,11.88L12,17.94V20H14.06L20.12,13.93L18.07,11.88M2,14V16H10V14H2Z"
                      fill="#00222b"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
          <div
            class="c26"
          >
            <div
              class="c27"
            >
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c14"
                >
                  Comprehensive Policy
                </h3>
                
              </div>
            </div>
            <div
              class="c15"
            >
              <p
                class="c16"
                font-size=""
              >
                Excess
              </p>
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c17"
                >
                  £3000
                </h3>
                
              </div>
            </div>
            <div
              class="c15"
            >
              <p
                class="c16"
                font-size=""
              >
                Hospital list
              </p>
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c17"
                >
                  Comprehensive
                </h3>
                
              </div>
            </div>
            <div
              class="c15"
            >
              <p
                class="c16"
                font-size=""
              >
                Outpatient limit
              </p>
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c17"
                >
                  Full
                </h3>
                
              </div>
            </div>
            <div
              class="c15"
            >
              <p
                class="c16"
                font-size=""
              >
                Underwriting
              </p>
              <div
                class="c9"
                data-testid="heading_3-helper_text-container"
              >
                <h3
                  class="c17"
                >
                  MORI
                </h3>
                
              </div>
            </div>
            <div
              class="c18"
            >
              <button
                class="c19"
                data-testid="comprehensive_edit_button-button"
                loading="false"
                type="button"
              >
                <div
                  class="c20"
                  data-testid="comprehensive_edit_button-button-preceding_icon"
                >
                  <svg
                    class="c21"
                    viewBox="0 0 24 24"
                  >
                    <path
                      class="c22"
                      d="M2,6V8H14V6H2M2,10V12H14V10H2M20.04,10.13C19.9,10.13 19.76,10.19 19.65,10.3L18.65,11.3L20.7,13.35L21.7,12.35C21.92,12.14 21.92,11.79 21.7,11.58L20.42,10.3C20.31,10.19 20.18,10.13 20.04,10.13M18.07,11.88L12,17.94V20H14.06L20.12,13.93L18.07,11.88M2,14V16H10V14H2Z"
                      fill="#00222b"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<OrganisationSettings /> Sales Preferences 1`] = `
.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 svg {
  cursor: pointer;
}

.c9 svg:hover {
  opacity: 0.8;
}

.c16 {
  width: 49rem;
  font-size: 1.4rem;
  margin: 0 0 0.5rem;
  padding: 0;
  display: inline-block;
  font-weight: 400;
  font-style: normal;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 1.6rem;
  color: #335257;
  word-break: break-word;
}

.c10 {
  width: auto;
  color: #335257;
  text-align: left;
  margin: 0 0 4rem;
  padding: 0;
  font-weight: 700;
  font-size: 18px;
  line-height: 28px;
}

.c11 {
  width: auto;
  color: #335257;
  text-align: left;
  margin: 0 0 1rem;
  padding: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 22px;
}

.c21 {
  width: auto;
  color: #335257;
  text-align: left;
  margin: 30px 0 10px;
  padding: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 22px;
}

.c12 {
  font-weight: 400;
  width: auto;
  color: #335257;
  text-align: left;
  margin: 0 0 2rem;
  padding: 0;
  font-size: 14px;
  line-height: 16px;
}

.c12 em,
.c12 i {
  font-style: italic;
}

.c12 b,
.c12 strong {
  font-weight: bold;
}

.c12 pre {
  font-family: "Courier 10 Pitch",Courier,monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
}

.c12 code {
  font-family: Monaco,Consolas,"Andale Mono","DejaVu Sans Mono",monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
  background: #faf8f0;
}

.c13 {
  margin: 0 0 2rem;
  width: auto;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c15 {
  margin: 0 0 1rem;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 49rem;
}

.c18 {
  border: 1px solid #B2BEC0;
  border-radius: 2.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c19 {
  margin: 0.5rem;
  height: 4.3rem;
  min-width: 4.3rem;
  border-radius: 2.6rem;
  border: none;
  cursor: pointer;
  background: transparent;
  font-size: 1.7rem;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 0 1.5rem;
  font-weight: thin;
  color: #B2BEC0;
  -webkit-transition: background 0.2s linear,color 0.2s linear;
  transition: background 0.2s linear,color 0.2s linear;
}

.c19:focus,
.c19:active {
  outline: none;
}

.c19:disabled {
  cursor: not-allowed;
}

.c20 {
  margin: 0.5rem;
  height: 4.3rem;
  min-width: 4.3rem;
  border-radius: 2.6rem;
  border: none;
  cursor: pointer;
  background: transparent;
  font-size: 1.7rem;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 0 1.5rem;
  font-weight: thin;
  color: #B2BEC0;
  -webkit-transition: background 0.2s linear,color 0.2s linear;
  transition: background 0.2s linear,color 0.2s linear;
  background: #197DA4;
  color: #FFF;
  font-weight: 700;
}

.c20:focus,
.c20:active {
  outline: none;
}

.c20:disabled {
  cursor: not-allowed;
}

.c20:disabled {
  background: #8CBED1;
}

.c17 {
  font-size: 1.6rem;
  max-width: calc(100% - 5rem);
  text-align: left;
  line-height: 2rem;
  color: #335257;
  cursor: pointer;
  margin: 0;
}

.c17 sup {
  visibility: hidden;
  padding-left: 0.2rem;
  color: #CC0135;
}

.c0 {
  margin: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-bottom: 5rem;
  width: 22.2rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  box-shadow: 0 0 5px 0 #EFEFEF;
}

.c2 {
  margin-right: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  width: 22.2rem;
  border-top: 1px solid #B2BEC0;
  border-bottom: 1px solid #B2BEC0;
  border-left: 1px solid #B2BEC0;
  border-right: 1px solid #B2BEC0;
  border-radius: 0.5rem 0.5rem 0 0;
  position: relative;
}

.c2:hover,
.c2:focus {
  opacity: 1;
}

.c2::after {
  content: "";
  position: absolute;
  top: -0.1rem;
  left: -0.1rem;
  width: 1rem;
  height: calc(100% + 0.2rem);
  background-color: #00272E;
  border: 1px solid #00272E;
  border-radius: 0.5rem 0 0 0;
}

.c4 {
  margin-right: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  width: 22.2rem;
  border-top: 0;
  border-bottom: 1px solid #B2BEC0;
  border-left: 1px solid #B2BEC0;
  border-right: 1px solid #B2BEC0;
  border-radius: 0;
  position: relative;
}

.c4:hover,
.c4:focus {
  opacity: 0.8;
}

.c6 {
  margin-right: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  width: 22.2rem;
  border-top: 0;
  border-bottom: 1px solid #B2BEC0;
  border-left: 1px solid #B2BEC0;
  border-right: 1px solid #B2BEC0;
  border-radius: 0 0 0.5rem 0.5rem;
  position: relative;
}

.c6:hover,
.c6:focus {
  opacity: 0.8;
}

.c3 {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #00272E;
  border-bottom: 1px solid transparent;
  cursor: default;
  margin-left: 2rem;
}

.c3:hover,
.c3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
}

.c5 {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-left: 2rem;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
}

.c7 {
  width: 100%;
  margin-left: 10rem;
}

.c8 {
  width: 72rem;
}

@media screen and (min-width:400px) {
  .c10 {
    font-size: calc(18px + (30 - 18) * (100vw - 400px) / (1200 - 400));
    line-height: calc(28px + (35 - 28) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c10 {
    font-size: 30px;
    line-height: 35px;
  }
}

@media screen and (min-width:400px) {
  .c11 {
    font-size: calc(14px + (20 - 14) * (100vw - 400px) / (1200 - 400));
    line-height: calc(22px + (25 - 22) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c11 {
    font-size: 20px;
    line-height: 25px;
  }
}

@media screen and (min-width:400px) {
  .c21 {
    font-size: calc(14px + (20 - 14) * (100vw - 400px) / (1200 - 400));
    line-height: calc(22px + (25 - 22) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c21 {
    font-size: 20px;
    line-height: 25px;
  }
}

@media screen and (min-width:400px) {
  .c12 {
    font-size: calc(14px + (16 - 14) * (100vw - 400px) / (1200 - 400));
    line-height: calc(16px + (20 - 16) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c12 {
    font-size: 16px;
    line-height: 20px;
  }
}

<div>
  <div
    class="c0"
    data-testid="settings-tabs-wrapper"
    type="vertical"
  >
    <ul
      class="c1"
      type="vertical"
    >
      <li
        class="c2"
        data-testid="tab-sales_preferences"
        type="vertical"
      >
        <a
          class="c3"
          name="sales_preferences"
          type="vertical"
        >
          Sales Preferences
        </a>
      </li>
      <li
        class="c4"
        data-testid="tab-client_journey"
        type="vertical"
      >
        <a
          class="c5"
          name="client_journey"
          type="vertical"
        >
          Client Journey
        </a>
      </li>
      <li
        class="c6"
        data-testid="tab-quick_quote"
        type="vertical"
      >
        <a
          class="c5"
          name="quick_quote"
          type="vertical"
        >
          Quick Quote
        </a>
      </li>
    </ul>
    <div
      class="c7"
      type="vertical"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
          data-testid="heading_2-helper_text-container"
        >
          <h2
            class="c10"
          >
            Sales Preferences
          </h2>
          
        </div>
        <div>
          <div
            class="c9"
            data-testid="heading_3-helper_text-container"
          >
            <h3
              class="c11"
            >
              Lead data
            </h3>
            
          </div>
          <p
            class="c12"
            font-size=""
          >
            As a 4C Platform user, you will have the option to purchase sales leads.
            <br />
            If this is of potential interest to you, please let us know the following:
          </p>
          <div
            class="c13"
            data-testid="buy_sales_leads-toggle-outer_wrapper"
            width="auto"
          >
            <div
              class="c14"
              data-testid="buy_sales_leads-toggle-wrapper"
            >
              <div
                class="c15"
                data-testid="buy_sales_leads-toggle-label_wrapper"
              >
                <div
                  class="c9"
                  data-testid="buy_sales_leads-helper_text-container"
                >
                  <label
                    class="c16 c17 input__label"
                    data-testid="buy_sales_leads-toggle-label"
                    font-size="1.4rem"
                    for="buy_sales_leads"
                    name="buy_sales_leads"
                    width="49rem"
                  >
                    Do you currently buy sales leads?
                    <sup>
                      *
                    </sup>
                  </label>
                  
                </div>
              </div>
              <div
                class="c18"
                data-testid="buy_sales_leads-toggle-options"
              >
                <button
                  class="c19"
                  data-testid="buy_sales_leads-toggle-option_yes"
                >
                  Yes
                </button>
                <button
                  class="c20"
                  data-testid="buy_sales_leads-toggle-option_no"
                >
                  No
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="c9"
            data-testid="heading_3-helper_text-container"
          >
            <h3
              class="c21"
            >
              Product sold
            </h3>
            
          </div>
          <p
            class="c12"
            font-size=""
          >
            Of the options below, please let us know what types of insurance your organisation sells:
          </p>
          <div
            class="c13"
            data-testid="critical_illness_cover-toggle-outer_wrapper"
            width="auto"
          >
            <div
              class="c14"
              data-testid="critical_illness_cover-toggle-wrapper"
            >
              <div
                class="c15"
                data-testid="critical_illness_cover-toggle-label_wrapper"
              >
                <div
                  class="c9"
                  data-testid="critical_illness_cover-helper_text-container"
                >
                  <label
                    class="c16 c17 input__label"
                    data-testid="critical_illness_cover-toggle-label"
                    font-size="1.4rem"
                    for="critical_illness_cover"
                    name="critical_illness_cover"
                    width="49rem"
                  >
                    Critical illness cover
                    <sup>
                      *
                    </sup>
                  </label>
                  
                </div>
              </div>
              <div
                class="c18"
                data-testid="critical_illness_cover-toggle-options"
              >
                <button
                  class="c19"
                  data-testid="critical_illness_cover-toggle-option_yes"
                >
                  Yes
                </button>
                <button
                  class="c20"
                  data-testid="critical_illness_cover-toggle-option_no"
                >
                  No
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="c13"
            data-testid="general_insurance-toggle-outer_wrapper"
            width="auto"
          >
            <div
              class="c14"
              data-testid="general_insurance-toggle-wrapper"
            >
              <div
                class="c15"
                data-testid="general_insurance-toggle-label_wrapper"
              >
                <div
                  class="c9"
                  data-testid="general_insurance-helper_text-container"
                >
                  <label
                    class="c16 c17 input__label"
                    data-testid="general_insurance-toggle-label"
                    font-size="1.4rem"
                    for="general_insurance"
                    name="general_insurance"
                    width="49rem"
                  >
                    General insurance
                    <sup>
                      *
                    </sup>
                  </label>
                  
                </div>
              </div>
              <div
                class="c18"
                data-testid="general_insurance-toggle-options"
              >
                <button
                  class="c19"
                  data-testid="general_insurance-toggle-option_yes"
                >
                  Yes
                </button>
                <button
                  class="c20"
                  data-testid="general_insurance-toggle-option_no"
                >
                  No
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="c13"
            data-testid="income_protection_insurance-toggle-outer_wrapper"
            width="auto"
          >
            <div
              class="c14"
              data-testid="income_protection_insurance-toggle-wrapper"
            >
              <div
                class="c15"
                data-testid="income_protection_insurance-toggle-label_wrapper"
              >
                <div
                  class="c9"
                  data-testid="income_protection_insurance-helper_text-container"
                >
                  <label
                    class="c16 c17 input__label"
                    data-testid="income_protection_insurance-toggle-label"
                    font-size="1.4rem"
                    for="income_protection_insurance"
                    name="income_protection_insurance"
                    width="49rem"
                  >
                    Income protection insurance
                    <sup>
                      *
                    </sup>
                  </label>
                  
                </div>
              </div>
              <div
                class="c18"
                data-testid="income_protection_insurance-toggle-options"
              >
                <button
                  class="c19"
                  data-testid="income_protection_insurance-toggle-option_yes"
                >
                  Yes
                </button>
                <button
                  class="c20"
                  data-testid="income_protection_insurance-toggle-option_no"
                >
                  No
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="c13"
            data-testid="investments-toggle-outer_wrapper"
            width="auto"
          >
            <div
              class="c14"
              data-testid="investments-toggle-wrapper"
            >
              <div
                class="c15"
                data-testid="investments-toggle-label_wrapper"
              >
                <div
                  class="c9"
                  data-testid="investments-helper_text-container"
                >
                  <label
                    class="c16 c17 input__label"
                    data-testid="investments-toggle-label"
                    font-size="1.4rem"
                    for="investments"
                    name="investments"
                    width="49rem"
                  >
                    Investments
                    <sup>
                      *
                    </sup>
                  </label>
                  
                </div>
              </div>
              <div
                class="c18"
                data-testid="investments-toggle-options"
              >
                <button
                  class="c19"
                  data-testid="investments-toggle-option_yes"
                >
                  Yes
                </button>
                <button
                  class="c20"
                  data-testid="investments-toggle-option_no"
                >
                  No
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="c13"
            data-testid="life_insurance-toggle-outer_wrapper"
            width="auto"
          >
            <div
              class="c14"
              data-testid="life_insurance-toggle-wrapper"
            >
              <div
                class="c15"
                data-testid="life_insurance-toggle-label_wrapper"
              >
                <div
                  class="c9"
                  data-testid="life_insurance-helper_text-container"
                >
                  <label
                    class="c16 c17 input__label"
                    data-testid="life_insurance-toggle-label"
                    font-size="1.4rem"
                    for="life_insurance"
                    name="life_insurance"
                    width="49rem"
                  >
                    Life insurance
                    <sup>
                      *
                    </sup>
                  </label>
                  
                </div>
              </div>
              <div
                class="c18"
                data-testid="life_insurance-toggle-options"
              >
                <button
                  class="c19"
                  data-testid="life_insurance-toggle-option_yes"
                >
                  Yes
                </button>
                <button
                  class="c20"
                  data-testid="life_insurance-toggle-option_no"
                >
                  No
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="c13"
            data-testid="mortgages-toggle-outer_wrapper"
            width="auto"
          >
            <div
              class="c14"
              data-testid="mortgages-toggle-wrapper"
            >
              <div
                class="c15"
                data-testid="mortgages-toggle-label_wrapper"
              >
                <div
                  class="c9"
                  data-testid="mortgages-helper_text-container"
                >
                  <label
                    class="c16 c17 input__label"
                    data-testid="mortgages-toggle-label"
                    font-size="1.4rem"
                    for="mortgages"
                    name="mortgages"
                    width="49rem"
                  >
                    Mortgages
                    <sup>
                      *
                    </sup>
                  </label>
                  
                </div>
              </div>
              <div
                class="c18"
                data-testid="mortgages-toggle-options"
              >
                <button
                  class="c19"
                  data-testid="mortgages-toggle-option_yes"
                >
                  Yes
                </button>
                <button
                  class="c20"
                  data-testid="mortgages-toggle-option_no"
                >
                  No
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="c13"
            data-testid="pensions-toggle-outer_wrapper"
            width="auto"
          >
            <div
              class="c14"
              data-testid="pensions-toggle-wrapper"
            >
              <div
                class="c15"
                data-testid="pensions-toggle-label_wrapper"
              >
                <div
                  class="c9"
                  data-testid="pensions-helper_text-container"
                >
                  <label
                    class="c16 c17 input__label"
                    data-testid="pensions-toggle-label"
                    font-size="1.4rem"
                    for="pensions"
                    name="pensions"
                    width="49rem"
                  >
                    Pensions
                    <sup>
                      *
                    </sup>
                  </label>
                  
                </div>
              </div>
              <div
                class="c18"
                data-testid="pensions-toggle-options"
              >
                <button
                  class="c19"
                  data-testid="pensions-toggle-option_yes"
                >
                  Yes
                </button>
                <button
                  class="c20"
                  data-testid="pensions-toggle-option_no"
                >
                  No
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="c13"
            data-testid="group_pmi-toggle-outer_wrapper"
            width="auto"
          >
            <div
              class="c14"
              data-testid="group_pmi-toggle-wrapper"
            >
              <div
                class="c15"
                data-testid="group_pmi-toggle-label_wrapper"
              >
                <div
                  class="c9"
                  data-testid="group_pmi-helper_text-container"
                >
                  <label
                    class="c16 c17 input__label"
                    data-testid="group_pmi-toggle-label"
                    font-size="1.4rem"
                    for="group_pmi"
                    name="group_pmi"
                    width="49rem"
                  >
                    Group private medical insurance
                    <sup>
                      *
                    </sup>
                  </label>
                  
                </div>
              </div>
              <div
                class="c18"
                data-testid="group_pmi-toggle-options"
              >
                <button
                  class="c19"
                  data-testid="group_pmi-toggle-option_yes"
                >
                  Yes
                </button>
                <button
                  class="c20"
                  data-testid="group_pmi-toggle-option_no"
                >
                  No
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="c13"
            data-testid="individual_pmi-toggle-outer_wrapper"
            width="auto"
          >
            <div
              class="c14"
              data-testid="individual_pmi-toggle-wrapper"
            >
              <div
                class="c15"
                data-testid="individual_pmi-toggle-label_wrapper"
              >
                <div
                  class="c9"
                  data-testid="individual_pmi-helper_text-container"
                >
                  <label
                    class="c16 c17 input__label"
                    data-testid="individual_pmi-toggle-label"
                    font-size="1.4rem"
                    for="individual_pmi"
                    name="individual_pmi"
                    width="49rem"
                  >
                    Individual private medical insurance
                    <sup>
                      *
                    </sup>
                  </label>
                  
                </div>
              </div>
              <div
                class="c18"
                data-testid="individual_pmi-toggle-options"
              >
                <button
                  class="c19"
                  data-testid="individual_pmi-toggle-option_yes"
                >
                  Yes
                </button>
                <button
                  class="c20"
                  data-testid="individual_pmi-toggle-option_no"
                >
                  No
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
